
=head1 Mail Toaster Changes

=head2 5.41 - Jul 04, 2013

    config changes: vpopmaild disabled, roaming users disabled,
        default log method changed from multilog to syslog
    automatic startup for vpopmaild
    removed maillogs postprocessor support (fragile)
    vpopmail port install now honors most config settings

=head2 5.40 - Apr 26, 2013

    updated install_deps.pl
    pod cleanups
    updated contrib/swaks
    training improvements for dspam

=head2 5.38 - Apr 23, 2013

    removed Proc::ProcessTable (causes test failures)
    handfuls of Test::More tweaks
    disabled defunct RBLs in config

=head2 5.37 - Apr 18, 2013

    added bin/email_restore.pl (thx Alex R.)
    pkgng support additions (Rob Lensen)
    some support for running with qpsmtpd

=head2 5.35 - Oct 23, 2012

    api change for get_dir_files, clean_tmp_dir, file_delete
    moved subs from Toaster to Utility: audit, error, dump_audit, dump_errors, has_module, find_config, find_readable, get_std_args, parse_config & parse_line
    replaced non-ASCII • with *
    added IO::Socket::SSL to bin/install_deps
    check just the 'standard' places for httpd.conf instead of using `find $dir`
    apache test failed if no httpd.conf found on test machines, this is quite likely. The lack of finding the file now skips the test.
    more argument unpacking with get_std_args
    toaster-watcher attempts to create missing service dirs
    added 'quiet' to %std_args (was manually passing it around)
    removed qmail_service_* settings

=head2 5.33 - Oct 13, 2012

    updated path to maildir-deliverquota
    updated path to freshclam.log
    added more support for qpsmtpd future
    added vpopmail_daemon setting to tw.conf
    added supervise support for qpsmtpd, vpopmaild, and qmail-deliverable daemons.
    get_maildir_messages now uses File::Find instead of `find …`
    deprecated rfc-ignorant DNSBLs
    replaced split '..' with split /../ syntax

=head2 5.32 - Aug 19, 2012
